# AIHack

./: ._temperatures_interpolated.csv  EVI_data_reshaping.py  README.md  _config.yml  filter_norm.py  fit.py  fit_seq.py  index.md  interpolate_space.py  model.py  plots_anson  plots_temperature  plots_temperature.py  process_data.py  process_join.py  pyproject.toml  temperatures_interpolated.csv  time_interpolation.py
