[tool.poetry]
name = "aihack"
version = "0.1.0"
description = ""
authors = ["Karim <karim.alaael-din@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.19.3"
pandas = "^1.2.2"
matplotlib = "^3.3.4"
scipy = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
