[tool.poetry]
name = "aihack"
version = "0.1.0"
description = ""
authors = ["Karim <karim.alaael-din@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.19.3"
pandas = "^1.2.2"
matplotlib = "^3.3.4"
scipy = "^1.6.1"
tensorflow = "^2.4.1"
sklearn = "^0.0"
geopandas = "^0.10.2"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
